terraform/demo-apps/tiredful-api/istio-test2.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "default"
  namespace: default
spec:
  mtls:
    mode: STRICT
