terraform/demo-apps/tiredful-api/istio-test.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: deny-method-get
  namespace: default
spec:
  selector:
    matchLabels:
      app: tf-tiredful-api
  action: DENY
  rules:
  - to:
    - operation:
        methods: ["GET"]
